deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: forzaboard-service
spec:
  selector:
    app: forzaboard
  ports:
    - port: 80
