deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: forzaboard-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
      - api.forzaboard.net
      secretName: api-forzaboard-tls-prod
  ingressClassName: nginx
  rules:
    - host: api.forzaboard.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: forzaboard-service
                port:
                  number: 80
